src/main/java/grammar/dslParser.java
// Generated from dsl.g4 by ANTLR 4.5

    package grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, ID=8, PACKAGE_NAME=9, 
		LOWER_ID=10, WS=11;
	public static final int
		RULE_class_stmt = 0, RULE_package_stmt = 1, RULE_properties_stmt = 2, 
		RULE_property_stmt = 3, RULE_constructor_stmt = 4, RULE_getset_stmt = 5;
	public static final String[] ruleNames = {
		"class_stmt", "package_stmt", "properties_stmt", "property_stmt", "constructor_stmt", 
		"getset_stmt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "','", "';'", "'['", "']'", "'all'", "'none'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "ID", "PACKAGE_NAME", 
		"LOWER_ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Class_stmtContext extends ParserRuleContext {
		public Class_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_stmt; }
	 
		public Class_stmtContext() { }
		public void copyFrom(Class_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ClassContext extends Class_stmtContext {
		public TerminalNode ID() { return getToken(dslParser.ID, 0); }
		public Package_stmtContext package_stmt() {
			return getRuleContext(Package_stmtContext.class,0);
		}
		public Properties_stmtContext properties_stmt() {
			return getRuleContext(Properties_stmtContext.class,0);
		}
		public Constructor_stmtContext constructor_stmt() {
			return getRuleContext(Constructor_stmtContext.class,0);
		}
		public Getset_stmtContext getset_stmt() {
			return getRuleContext(Getset_stmtContext.class,0);
		}
		public ClassContext(Class_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_stmtContext class_stmt() throws RecognitionException {
		Class_stmtContext _localctx = new Class_stmtContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_class_stmt);
		try {
			_localctx = new ClassContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			match(ID);
			setState(13);
			match(T__0);
			setState(14);
			package_stmt();
			setState(15);
			match(T__1);
			setState(16);
			properties_stmt();
			setState(17);
			match(T__1);
			setState(18);
			constructor_stmt();
			setState(19);
			match(T__1);
			setState(20);
			getset_stmt();
			setState(21);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_stmtContext extends ParserRuleContext {
		public Package_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_stmt; }
	 
		public Package_stmtContext() { }
		public void copyFrom(Package_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PackageContext extends Package_stmtContext {
		public TerminalNode PACKAGE_NAME() { return getToken(dslParser.PACKAGE_NAME, 0); }
		public PackageContext(Package_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitPackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitPackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_stmtContext package_stmt() throws RecognitionException {
		Package_stmtContext _localctx = new Package_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package_stmt);
		try {
			_localctx = new PackageContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(PACKAGE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Properties_stmtContext extends ParserRuleContext {
		public Properties_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_properties_stmt; }
	 
		public Properties_stmtContext() { }
		public void copyFrom(Properties_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PropertiesContext extends Properties_stmtContext {
		public List<Property_stmtContext> property_stmt() {
			return getRuleContexts(Property_stmtContext.class);
		}
		public Property_stmtContext property_stmt(int i) {
			return getRuleContext(Property_stmtContext.class,i);
		}
		public PropertiesContext(Properties_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterProperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitProperties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Properties_stmtContext properties_stmt() throws RecognitionException {
		Properties_stmtContext _localctx = new Properties_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_properties_stmt);
		int _la;
		try {
			_localctx = new PropertiesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			match(T__3);
			setState(26);
			property_stmt();
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(27);
				match(T__1);
				setState(28);
				property_stmt();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Property_stmtContext extends ParserRuleContext {
		public Property_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property_stmt; }
	 
		public Property_stmtContext() { }
		public void copyFrom(Property_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PropertyContext extends Property_stmtContext {
		public List<TerminalNode> ID() { return getTokens(dslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(dslParser.ID, i);
		}
		public PropertyContext(Property_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Property_stmtContext property_stmt() throws RecognitionException {
		Property_stmtContext _localctx = new Property_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_property_stmt);
		try {
			_localctx = new PropertyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(ID);
			setState(37);
			match(T__0);
			setState(38);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constructor_stmtContext extends ParserRuleContext {
		public Constructor_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor_stmt; }
	 
		public Constructor_stmtContext() { }
		public void copyFrom(Constructor_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Constructor_arrayContext extends Constructor_stmtContext {
		public List<TerminalNode> ID() { return getTokens(dslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(dslParser.ID, i);
		}
		public Constructor_arrayContext(Constructor_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterConstructor_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitConstructor_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitConstructor_array(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Constructor_noneContext extends Constructor_stmtContext {
		public Constructor_noneContext(Constructor_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterConstructor_none(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitConstructor_none(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitConstructor_none(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Constructor_allContext extends Constructor_stmtContext {
		public Constructor_allContext(Constructor_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterConstructor_all(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitConstructor_all(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitConstructor_all(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constructor_stmtContext constructor_stmt() throws RecognitionException {
		Constructor_stmtContext _localctx = new Constructor_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constructor_stmt);
		int _la;
		try {
			setState(52);
			switch (_input.LA(1)) {
			case T__5:
				_localctx = new Constructor_allContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				match(T__5);
				}
				break;
			case T__3:
				_localctx = new Constructor_arrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				match(T__3);
				setState(42);
				match(ID);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(43);
					match(T__1);
					setState(44);
					match(ID);
					}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(50);
				match(T__4);
				}
				break;
			case T__6:
				_localctx = new Constructor_noneContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Getset_stmtContext extends ParserRuleContext {
		public Getset_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_getset_stmt; }
	 
		public Getset_stmtContext() { }
		public void copyFrom(Getset_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Getset_noneContext extends Getset_stmtContext {
		public Getset_noneContext(Getset_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterGetset_none(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitGetset_none(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitGetset_none(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Getset_arrayContext extends Getset_stmtContext {
		public List<TerminalNode> ID() { return getTokens(dslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(dslParser.ID, i);
		}
		public Getset_arrayContext(Getset_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterGetset_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitGetset_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitGetset_array(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Getset_allContext extends Getset_stmtContext {
		public Getset_allContext(Getset_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterGetset_all(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitGetset_all(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitGetset_all(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Getset_stmtContext getset_stmt() throws RecognitionException {
		Getset_stmtContext _localctx = new Getset_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_getset_stmt);
		int _la;
		try {
			setState(66);
			switch (_input.LA(1)) {
			case T__5:
				_localctx = new Getset_allContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(T__5);
				}
				break;
			case T__3:
				_localctx = new Getset_arrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(T__3);
				setState(56);
				match(ID);
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(57);
					match(T__1);
					setState(58);
					match(ID);
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(64);
				match(T__4);
				}
				break;
			case T__6:
				_localctx = new Getset_noneContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}